Solved Resharper errors

--- a/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -1,6 +1,4 @@
 ﻿@page
-@using BmsSurvey.Common.Interfaces
-@using BmsSurvey.WebApp.Resources
 @model BmsSurvey.WebApp.Areas.Identity.Pages.Account.Manage.SetPasswordModel
 @{
     ViewData["Title"] = LayoutLocalizer.GetLocalizedHtmlString("SET_PASSWORD");
@@ -9,7 +7,7 @@
 @inject ILocalizationService<LayoutResource> LayoutLocalizer
 
 <h4>@LayoutLocalizer.GetLocalizedHtmlString("SET_YOUR_PASSWORD")</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
+<partial name="_StatusMessage"/>
 <p class="text-info">
     @LayoutLocalizer.GetLocalizedHtmlString("SET_PASSWORD_TEXT")
 </p>
