Fixed Resharper Issues

--- a/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/_ViewImports.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@using BmsSurvey.WebApp.Areas.Identity.Pages.Account
+﻿@using BmsSurvey.Common.Interfaces
+@using BmsSurvey.WebApp.Resources
+@using BmsSurvey.WebApp.Areas.Identity.Pages.Account
