--- a/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -7,7 +7,7 @@
 
 <h4>@ViewData["Title"]</h4>
 
-@await Html.PartialAsync("_StatusMessage", Model.StatusMessage).ConfigureAwait(false)
+<partial name="_StatusMessage" model="@Model.StatusMessage" />
 
 <div class="row">
     <div class="col-md-6">
@@ -25,8 +25,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.ConfirmPassword">@LayoutLocalizer.GetLocalizedHtmlString("CONFIRM_PASSWORD")</label>
-                                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <input asp-for="Input.ConfirmPassword" class="form-control" />
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">@LayoutLocalizer.GetLocalizedHtmlString("UPDATE_PASSWORD")</button>
         </form>
