--- a/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -8,7 +8,7 @@
 @inject ILocalizationService<LayoutResource> LayoutLocalizer
 
 <h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
+<partial name="_StatusMessage" model="@Model.StatusMessage"/>
 <div class="row">
     <div class="col-md-6">
         <form id="profile-form" method="post">
