--- a/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -8,7 +8,8 @@
 }
 @inject ILocalizationService<LayoutResource> LayoutLocalizer
 
-@Html.Partial("_StatusMessage", Model.StatusMessage)
+<partial name="_StatusMessage" model="@Model.StatusMessage" />
+
 <h4>@ViewData["Title"]</h4>
 <div class="alert alert-warning" role="alert">
     <p>
