--- a/Source/BmsSurvey.WebApp/Views/Survey/Index.cshtml
+++ b/Source/BmsSurvey.WebApp/Views/Survey/Index.cshtml
@@ -22,10 +22,8 @@
                                  {
                                      @:disabled
                                  }">
-                <a class="page-link"
-                   asp-action="Previous"
-                   asp-route-id="@Model.Id"
-                   asp-route-current="@Model.PageNumber"
+                <a class="page-link" asp-action="Index" asp-route-id="@Model.Id"
+                   asp-route-pagenum="@(Model.PageNumber - 1)"
                    aria-label="Previous">
                     <i class="fas fa-chevron-left"></i>
                     @LayoutLocalizer.GetLocalizedHtmlString("PREVIOUSPAGE")
@@ -35,10 +33,8 @@
                                  {
                                      @:disabled
                                  }">
-                <a class="page-link"
-                   asp-action="Next"
-                   asp-route-id="@Model.Id"
-                   asp-route-current="@Model.PageNumber"
+                <a class="page-link" asp-action="Index" asp-route-id="@Model.Id"
+                   asp-route-pagenum="@(Model.PageNumber + 1)"
                    aria-label="Next">
                     @LayoutLocalizer.GetLocalizedHtmlString("NEXTPAGE")
                     <i class="fas fa-chevron-right"></i>
