--- a/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -8,7 +8,8 @@
 }
 @inject ILocalizationService<LayoutResource> LayoutLocalizer
 
-@await Html.PartialAsync("_StatusMessage", Model.StatusMessage).ConfigureAwait(false)
+<partial name="_StatusMessage" model="@Model.StatusMessage" />
+
 <h4>@ViewData["Title"]</h4>
 <div>
     <p>@LayoutLocalizer.GetLocalizedHtmlString("CONFIGURE_AUTHENTICATOR_APP_STEPS")</p>
