--- a/Source/BmsSurvey.WebApp/Areas/Administration/Views/Users/Index.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Administration/Views/Users/Index.cshtml
@@ -21,6 +21,7 @@
                                       col.Bound(m => m.Id).Width(50);
                                       col.Bound(m => m.TabNumber);
                                       col.Bound(m => m.UserName);
+                                      col.Bound(m => m.Email);
                                       col.Bound(m => m.FirstName);
                                       col.Bound(m => m.SirName);
                                       col.Bound(m => m.LastName);
