--- a/Source/BmsSurvey.WebApp/Views/Survey/ThankYouForm.cshtml
+++ b/Source/BmsSurvey.WebApp/Views/Survey/ThankYouForm.cshtml
@@ -1,5 +1,4 @@
-﻿@model object
-@inject ILocalizationService<LayoutResource> LocalizationService
+﻿@inject ILocalizationService<LayoutResource> LocalizationService
 
 @{
     ViewData["Title"] = LocalizationService.GetLocalizedHtmlString("THANK_YOU");
