--- a/Source/BmsSurvey.WebApp/Areas/Administration/Views/Roles/Index.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Administration/Views/Roles/Index.cshtml
@@ -8,10 +8,11 @@
     ViewBag.Title = "Роли";
 }
 
-<div class="panel panel-primary">
-    <div class="panel-heading">@ViewBag.Title</div>
-    <table class="table table-striped">
-        <thead>
+<div class="card">
+    <div class="card-header bg-primary text-white">@ViewBag.Title</div>
+    <div class="card-body">
+        <table class="table table-striped table-sm">
+            <thead>
             <tr>
                 <th>@Html.LabelFor(m => m.First().Id)</th>
                 <th>@Html.LabelFor(m => m.First().Name)</th>
@@ -19,8 +20,8 @@
                 <th>@Html.LabelFor(m => m.First().Users)</th>
                 <th style="min-width:220px"></th>
             </tr>
-        </thead>
-        <tbody>
+            </thead>
+            <tbody>
             @if (Model.Count() == 0)
             {
                 <tr><td colspan="4" class="text-center">Няма роли</td></tr>
@@ -49,15 +50,16 @@
                             @using (Html.BeginForm("Delete", "Roles", new { id = role.Id }))
                             {
                                 @Html.AntiForgeryToken()
-                            <a href="@Url.Action("Edit", "Roles", new { id = role.Id })" class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-edit"></span> @LayoutLocalizer.GetLocalizedHtmlString("EDIT")</a>
+                                <a href="@Url.Action("Edit", "Roles", new { id = role.Id })" class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-edit"></span> @LayoutLocalizer.GetLocalizedHtmlString("EDIT")</a>
 
-                            <button type="submit" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-trash"></span> @LayoutLocalizer.GetLocalizedHtmlString("DELETE")</button>
+                                <button type="submit" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-trash"></span> @LayoutLocalizer.GetLocalizedHtmlString("DELETE")</button>
                             }
                         </td>
                     </tr>
                 }
             }
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </div>
 @Html.ActionLink(@LayoutLocalizer.GetLocalizedHtmlString("CREATE"), "Create","Roles", null, new { @class = "btn btn-primary" })
