--- a/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -17,7 +17,7 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.CultureId">@LayoutLocalizer.GetLocalizedHtmlString("CULTURE")</label>
-                @Html.DropDownListFor(m => m.Input.CultureId, Model.SuppurtedCultures, "Select an borrower...", new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.Input.CultureId, Model.SuppurtedCultures, "Select an language...", new { @class = "form-control" })
                 <span asp-validation-for="Input.CultureId" class="text-danger"></span>
             </div>
             <div class="form-group">
