--- a/Source/BmsSurvey.WebApp/Views/Home/Index.cshtml
+++ b/Source/BmsSurvey.WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,55 @@
-﻿@{
+﻿@using BmsSurvey.WebApp.Resources
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@inject ILocalizationService<LayoutResource> LayoutLocalizer
+
+<div class="row">
+    <div class="col-sm-6 col">
+        @if (System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName.ToLower() == "bg")
+        {
+            <img class="home-icecream" src="~/images/SurveyIcecreamBG.png" />
+        }
+        else
+        {
+            <img class="home-icecream" src="~/images/SurveyIcecream.png" />
+        }
+    </div>
+    <div class="col-sm-6">
+        <div class="clearfix">
+            @if (System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName.ToLower() == "bg")
+            {
+                <img class="home-logo float-right" src="~/images/BMSSurveyLogoBG.png" />
+
+            }
+            else
+            {
+                <img class="home-logo float-right" src="~/images/BMSSurveyLogo.png" />
+            }
+        </div>
+
+        <div class="home-text-wrapper">
+            @if (System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName.ToLower() == "bg")
+            {
+                <img class="home-slogun" src="~/images/SurveySlogunBG.png" />
+
+            }
+            else
+            {
+                <img class="home-slogun" src="~/images/SurveySlogun.png" />
+            }
+        </div>
+    </div>
 </div>
+
+@section Styles
+{
+    <style>
+        body {
+            overflow: hidden;
+        }
+    </style>
+}
+
+
