--- a/Source/BmsSurvey.WebApp/wwwroot/css/site.css
+++ b/Source/BmsSurvey.WebApp/wwwroot/css/site.css
@@ -581,3 +581,28 @@ p.display-3.subheading {
     right: 30px;
     font-size: 1.5em
 }
+
+img.home-icecream {
+    width: 100%;
+    float: left;
+    left: 0px;
+    margin-left: -15px;
+    margin-top: -10px;
+}
+
+img.home-logo {
+    /*float: right;*/
+    width: 60%;
+    margin-top: 50px;
+}
+
+div.home-text-wrapper {
+    margin-left: -15%;
+    margin-right: 40px;
+    margin-top: 38%;
+}
+
+img.home-slogun {
+    width: 100%;
+}
+
