--- a/Source/BmsSurvey.WebApp/Areas/Administration/Views/Roles/Create.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Administration/Views/Roles/Create.cshtml
@@ -1,40 +1,27 @@
-﻿@model BmsSurvey.WebApp.Areas.Administration.Models.ViewModels.CreateRoleViewModel
+﻿@using BmsSurvey.WebApp.Resources
+@model BmsSurvey.Application.Roles.Commands.CreateRole.CreateRoleCommand
 @{
     ViewBag.Title = "Създаване на роля";
+    Layout = "_LayoutSlim";
 }
-
-<div class="container body-content">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <h2 class="text-center">@ViewBag.Title</h2>
-            <hr />
-            @Html.ValidationSummary()
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-                <div class="row">
-                    <div class="col-md-10 col-md-offset-1">
-                        <div class="form-group">
-                            <div class="row">
-                                @Html.LabelFor(m => m.Name, new { @class = "control-label col-md-3" })
-                                @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control col-md-9" } })
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="row">
-                                @Html.LabelFor(m => m.Description, new { @class = "control-label col-md-3" })
-                                @Html.EditorFor(m => m.Description, new { htmlAttributes = new { @class = "form-control col-md-9" } })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="well well-sm clearfix">
-                    <div class="pull-right">
-                        <button type="submit" class="btn btn-primary">Създай</button>
-                        @Html.ActionLink("Отказ", "Index","Roles", null, new { @class = "btn btn-default" })
-                    </div>
-                </div>
-            }
-        </div>
+@inject ILocalizationService<LayoutResource> LayoutLocalizer
+<div class="row">
+    <div class="col-md-8 offset-md-2">
+        <h2 class="text-center">@ViewBag.Title</h2>
+        <hr/>
+        <form asp-action="Create" method="post">
+            <div id="wrapper" class="mt-5 mb-5">
+                <input type="text" class="form-control" asp-for="Name" form-input/>
+                <input type="text" class="form-control" asp-for="Description" form-input/>
+            </div>
+            
+            <hr/>
+            <div class="float-right">
+                <button type="submit" class="btn btn-primary">@LayoutLocalizer.GetLocalizedHtmlString("CREATE")</button>
+                <a asp-action="Index" asp-controller="Roles" class="btn btn-danger">@LayoutLocalizer.GetLocalizedHtmlString("CANCEL")</a>
+            </div>
+        </form>
     </div>
+    
 </div>
+
