--- a/Source/BmsSurvey.WebApp/Areas/Administration/Views/Roles/Edit.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Administration/Views/Roles/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@inject ILocalizationService<LayoutResource> LayoutLocalizer
+@using BmsSurvey.Application.Users.Models
 @using BmsSurvey.Common.Interfaces
 @using BmsSurvey.WebApp.Resources
-@model BmsSurvey.WebApp.Areas.Administration.Models.ViewModels.RoleEditViewModel
+@model BmsSurvey.Application.Roles.Models.RoleEditViewModel
 @{
     ViewBag.Title = "Редактиране на роля";
 }
@@ -10,95 +11,104 @@
 @using (Html.BeginForm("Edit", "Roles", new { area = "Administration" }, FormMethod.Post, true, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <input type="hidden" name="RoleName" value="@Model.Role.Name" />
-    <div class="row ">
+   <div class="row ">
         <div class="col-md-6">
-            <div class="panel panel-primary">
-                <div class="panel-heading">Добавяне към ролята "@Model.Role.Name"</div>
+                <input type="hidden" asp-for="RoleReferenceName"/>
+                <div class="card bg-primary text-white text-center pt-1 pb-1 mb-2">Добавяне към ролята "@Model.Name"</div>
                 @(Html.Kendo()
-                                .Grid(Model.NonMembers)
-                                .Name("IdsToAdd")
-                                .Columns(col =>
-                                {
-                                    col.Bound(c => c.UserName);
-                                    col.Bound(c => c.FullName);
-                                    col.Bound(c => c.Id).ClientTemplate("<input type='checkbox' name='IdsToAdd' value='#:Id #' />").Title(LayoutLocalizer.GetLocalizedHtmlString("FOR_INCLUDING"));
-                                })
-                        .Pageable(pageable => pageable
-                                    .Refresh(true)
-                                    .PageSizes(new[] { 15, 20, 50, 100 })
-                                    .ButtonCount(5)
-                                )
-                        .Scrollable(scr => scr.Height(420))
-                        .Filterable()
-                        .DataSource(dataSource => dataSource
-                                .Ajax()
-                                .PageSize(15)
-                                .ServerOperation(false)
-                                                    .Model(model =>
-                                                    {
-                                                        model.Id(p => p.Id);
-                                                        model.Field(p => p.UserName);
-                                                        model.Field(p => p.FullName);
-                                                        model.Field(p => p.Id);
-                                                    })
-                            ))
-            </div>
+                    .Grid<UserSimpleViewModel>()
+                    .Name("IdsToAdd")
+                    .Columns(col =>
+                    {
+                        col.Bound(c => c.UserName);
+                        col.Bound(c => c.FullName);
+                        col.Bound(c => c.Id).ClientTemplate("<input type='checkbox' name='IdsToAdd' value='#:Id #' />")
+                            .Title(LayoutLocalizer.GetLocalizedHtmlString("FOR_INCLUDING"));
+                    })
+                .Pageable(pageable => pageable
+                            .Refresh(true)
+                            .PageSizes(new[] { 15, 20, 50, 100 })
+                            .ButtonCount(5)
+                        )
+                .Scrollable(scr => scr.Height(420))
+                .Filterable()
+                .DataSource(dataSource => dataSource
+                        .Ajax()
+                        .PageSize(15)
+                        .Read(read => read.Action("GetNonMembers", "Roles", new { area = "Administration" }).Data("getRoleData"))
+                        .ServerOperation(true)
+                        .Model(model =>
+                        {
+                            model.Id(p => p.Id);
+                            model.Field(p => p.UserName);
+                            model.Field(p => p.FullName);
+                            model.Field(p => p.Id);
+                        })
+                ))
+
         </div>
         <div class="col-md-6">
-            <div class="panel panel-primary">
-                <div class="panel-heading">Премахване от ролята "@Model.Role.Name"</div>
+            
+                <div class="card bg-primary text-white text-center pt-1 pb-1 mb-2">Премахване от ролята "@Model.Name"</div>
                 @(Html.Kendo()
-                                                .Grid(Model.Members)
-                                                .Name("IdsToDelete")
-                                                .Columns(col =>
-                                                {
-                                                    col.Bound(c => c.UserName);
-                                                    col.Bound(c => c.FullName);
-                                                    col.Bound(c => c.Id).ClientTemplate("<input type='checkbox' name='IdsToDelete' value='#:Id #' />").Title(LayoutLocalizer.GetLocalizedHtmlString("FOR_EXCLUDING"));
-                                                })
-                        .Pageable(pageable => pageable
-                                    .Refresh(true)
-                                    .PageSizes(new[] { 15, 20, 50, 100 })
-                                    .ButtonCount(5)
-                                  )
-                        .Scrollable(scr => scr.Height(420))
-                        .Filterable()
-                        .DataSource(dataSource => dataSource
-                                    .Ajax()
-                                    .PageSize(15)
-                                    .ServerOperation(false)
-                                ))
-            </div>
+                    .Grid<UserSimpleViewModel>()
+                    .Name("IdsToDelete")
+                    .Columns(col =>
+                    {
+                        col.Bound(c => c.UserName);
+                        col.Bound(c => c.FullName);
+                        col.Bound(c => c.Id).ClientTemplate("<input type='checkbox' name='IdsToDelete' value='#:Id #' />").Title(LayoutLocalizer.GetLocalizedHtmlString("FOR_EXCLUDING"));
+                    })
+                    .Pageable(pageable => pageable
+                                .Refresh(true)
+                                .PageSizes(new[] { 15, 20, 50, 100 })
+                                .ButtonCount(5)
+                              )
+                    .Scrollable(scr => scr.Height(420))
+                    .Filterable()
+                    .DataSource(dataSource => dataSource
+                                .Ajax()
+                                .PageSize(15)
+                                .ServerOperation(true)
+                                .Model(model =>
+                                {
+                                    model.Id(p => p.Id);
+                                    model.Field(p => p.UserName);
+                                    model.Field(p => p.FullName);
+                                    model.Field(p => p.Id);
+                                })
+                                .Read(read => read.Action("GetMembers", "Roles", new { area = "Administration" }).Data("getRoleData"))
+                    )
+                  )
         </div>
     </div>
 
-    <div class="well well-sm clearfix well-roles">
+    <div class="card bg-light clearfix well-roles mt-2 pl-2">
         <div class="row row-roles-well">
             <div class="col-lg-4 col-sm-12">
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Name, new { @class = "control-label col-md-3 col-sm-3" })
-                    <div class="col-md-9 col-sm-9 ">
-                        @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control " } })
-                    </div>
-                </div>
+                <input asp-for="Name" class="form-control" form-input />
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Description, new { @class = "control-label col-md-3 col-sm-3 " })
-                    <div class="col-md-9 col-sm-9 all-space-width">
-                        @Html.EditorFor(m => m.Description, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>
-                </div>
+            <div class="col-lg-4 col-sm-12 offset-lg-1">
+                <input asp-for="Description" class="form-control" form-input />
             </div>
-            <div class="col-lg-4 col-lg-offset-0 col-md-offset-3 col-sm-offset-0 col-sm-offset-1 col-sm-5 col-xs-offset-1 col-xs-5">
+            <div class="col-lg-2 offset-lg-1 offset-md-3 offset-sm-1 col-sm-5">
                 <div class="form-group">
-                    <div class="pull-right">
-                        <button type="submit" class="btn btn-primary">@LayoutLocalizer.GetLocalizedHtmlString("SAVE")</button>
-                        @Html.ActionLink(LayoutLocalizer.GetLocalizedHtmlString("CANCEL"), "Index","Roles", null, new { @class = "btn btn-default" })
+                    <div class="float-right">
+                        <button type="submit" class="btn btn-primary"> <i class="far fa-save"></i> @LayoutLocalizer.GetLocalizedHtmlString("SAVE")</button>
+                        <a asp-action="Index" asp-controller="Roles" class="btn btn-danger"> <i class="far fa-window-close"></i> @LayoutLocalizer.GetLocalizedHtmlString("CANCEL")</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+}
+
+@section Scripts{
+    <script>
+        function getRoleData() {
+            let result = getAntiforgeryToken();
+            result.Name = $('#Name').val();
+            return result;
+        }
+    </script>
 }
