--- a/Source/BmsSurvey.WebApp/Areas/Administration/Views/Roles/Index.cshtml
+++ b/Source/BmsSurvey.WebApp/Areas/Administration/Views/Roles/Index.cshtml
@@ -1,9 +1,7 @@
 ﻿@inject ILocalizationService<LayoutResource> LayoutLocalizer
-
-@using BmsSurvey.Common.Interfaces
-@using BmsSurvey.WebApp.Areas.Administration.Models.ViewModels
+@using BmsSurvey.Application.Roles.Models
 @using BmsSurvey.WebApp.Resources
-@model IEnumerable<BmsSurvey.WebApp.Areas.Administration.Models.ViewModels.RolePresentationViewModel>
+@model IEnumerable<BmsSurvey.Application.Roles.Models.RolePresentationViewModel>
 @{
     ViewBag.Title = "Роли";
 }
@@ -22,7 +20,7 @@
             </tr>
             </thead>
             <tbody>
-            @if (Model.Count() == 0)
+            @if (!Model.Any())
             {
                 <tr><td colspan="4" class="text-center">Няма роли</td></tr>
             }
@@ -35,7 +33,7 @@
                         <td>@Html.DisplayFor(m => role.Name)</td>
                         <td>@Html.DisplayFor(m => role.Description)</td>
                         <td>
-                            @if (role.Users == null || role.Users.Count() == 0)
+                            @if (!role.Users?.Any() ?? false)
                             {
                                 @:Няма потребители асоциирани с тази роля
                             }
@@ -50,9 +48,9 @@
                             @using (Html.BeginForm("Delete", "Roles", new { id = role.Id }))
                             {
                                 @Html.AntiForgeryToken()
-                                <a href="@Url.Action("Edit", "Roles", new { id = role.Id })" class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-edit"></span> @LayoutLocalizer.GetLocalizedHtmlString("EDIT")</a>
+                                <a href="@Url.Action("Edit", "Roles", new { id = role.Id })" class="btn btn-primary btn-xs"> <i class="far fa-edit"></i> @LayoutLocalizer.GetLocalizedHtmlString("EDIT")</a>
 
-                                <button type="submit" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-trash"></span> @LayoutLocalizer.GetLocalizedHtmlString("DELETE")</button>
+                                <button type="submit" class="btn btn-danger btn-xs"> <i class="fas fa-trash-alt"></i> @LayoutLocalizer.GetLocalizedHtmlString("DELETE")</button>
                             }
                         </td>
                     </tr>
